rysunki z duzej litery

--- a/mgr/praca/nadajnik.tex
+++ b/mgr/praca/nadajnik.tex
@@ -5,14 +5,14 @@ Nadajnik zbudowany został w oparciu o \textit{Arduino Nano} \cite{bib:arduinoNa
 bezpośrednio cztery nadajniki ultradźwiękowe (rezonatory piezoelektryczne) typu 40ST-12 \cite{bib:40ST12}, schemat 
 przedstawiony jest na rysunku \ref{fig:nadajnik_schemat}.
 
-\rysunek{transmitter}{schemat nadajnika ultradźwiękowego}{\label{fig:nadajnik_schemat}}
+\rysunek{transmitter}{Schemat nadajnika ultradźwiękowego}{\label{fig:nadajnik_schemat}}
 
 
-Całość umieszczona została w ramie w kształcie litery \textbf{H} wykonanej z rurek PCV.
+Całość umieszczona została w ramie w kształcie litery H wykonanej z rurek PCV.
 Rezonatory zostały dodatkowo odizolowane od ramy rzepami co ułatwia ich zdejmowanie jak i skutecznie
 zapobiega przenoszeniu się drgań.
 
-\rysunek{nadajnik_H}{szkic ramy nadajnika}{\label{fig:nadajnik_szkic}}
+\rysunek{nadajnik_H}{Szkic ramy nadajnika}{\label{fig:nadajnik_szkic}}
 
 
 Android Nano połączony jest z odbiornikiem 6m kablem, którym przesyłane są sygnały sterujące jak i zasilanie.
@@ -34,7 +34,7 @@ czasu jaki potrzebował sygnał dźwiękowy by do niego dotrzeć.
  \begin{figure}[h!]
     \centering
     \includegraphics[width=1.15\textwidth, trim= 47mm 0mm 0mm 0mm,clip]{output_signal}
-    \caption{sygnał wysterowania nadajnika piezoelektrycznego}
+    \caption{Sygnał wysterowania nadajnika piezoelektrycznego}
     \label{fig:output_signal}
 \end{figure}
 
