--- a/mgr/praca/teoria.tex
+++ b/mgr/praca/teoria.tex
@@ -6,7 +6,7 @@ podległości od znanych punktów stałych. Niech $\boldsymbol{x}$ będzie szuka
 $\boldsymbol{y_1,y_2,y_3}$ stałymi punktami o znanym położeniu, a $r_1,r_2,r_3$ wyznaczonymi odległościami, 
 rysunek \ref{fig:polozenie}. 
 
-\rysunekW{polozenie}{wyznaczenie położenia na podstawie odległości od punktów stałych}{\label{fig:polozenie}}{0.7}
+\rysunekW{polozenie}{Wyznaczenie położenia na podstawie odległości od punktów stałych}{\label{fig:polozenie}}{0.7}
 Wtedy $\boldsymbol{x}$ możemy wyznaczyć za pomocą układu równań:
 \[
  \begin{cases}
@@ -62,7 +62,7 @@ z czego ostatecznie otrzymujemy:
 Prezentowane urządzenie do pomiaru odległości wykorzystuje metodę pomiaru czasu jaki 
 potrzebuje dźwięk aby pokonać drogę od nadajnika do odbiornika,
 rysunek \ref{fig:pomiar_odleglosci}.
-\rysunekW{pomiar_odleglosci}{pomiar odległości za pomocą ultradźwięków}{\label{fig:pomiar_odleglosci}}{0.4}
+\rysunekW{pomiar_odleglosci}{Pomiar odległości za pomocą ultradźwięków}{\label{fig:pomiar_odleglosci}}{0.4}
 
 Znając prędkość rozchodzenia się fal dźwiękowych w powietrzy oraz czas jaki fala dźwiękowa potrzebowała
 aby pokonać dany dystans jesteśmy w stanie wyznaczyć szukaną odległość.
