--- a/mgr/praca/mp3d.tex
+++ b/mgr/praca/mp3d.tex
@@ -34,7 +34,7 @@ co 200ms. Rysunek \ref{fig:com_output_2m} przedstawia sygnał z jednego mikrofon
     \centering
     \includegraphics[width=1.15\textwidth, trim= 47mm 0mm 0mm 0mm,clip]{com_output_2m_1}
     \includegraphics[width=1.15\textwidth, trim= 47mm 0mm 0mm 0mm,clip]{com_output_2m_2}
-    \caption{sygnał odebrany przez moduł \textit{com.py}. 
+    \caption{Sygnał odebrany przez moduł \textit{com.py}. 
     Odległość między nadajnikiem a odbiornikiem wynosi 2 metry.
     Na górnym wykresie po prawej stronie widoczne są również sygnały odbite od ścian.
     }
@@ -114,7 +114,7 @@ to zostanie od uaktualniony.
  \begin{figure}[h!]
     \centering
     \includegraphics[width=1.15\textwidth, trim= 47mm 0mm 0mm 0mm,clip]{blad_korel}
-    \caption{sygnał przetworzony przez moduł \textit{find\_pattern.py}.}
+    \caption{Sygnał przetworzony przez moduł \textit{find\_pattern.py}.}
     \label{fig:blad_korel}
 \end{figure}
  
@@ -153,7 +153,7 @@ Rysunek \ref{fig:kalibracja_12x} przedstawia widok 12 sygnałów wraz z zaznaczo
  \begin{figure}[h!]
     \centering
     \includegraphics[width=1.12\textwidth, trim= 46mm 0mm 0mm 0mm,clip]{kalibracja_12x}
-    \caption{kalibracja, widok 12 sygnałów z zaznaczonymi wzorcami}
+    \caption{Kalibracja, widok 12 sygnałów z zaznaczonymi wzorcami}
     \label{fig:kalibracja_12x}
 \end{figure}
 
