--- a/mgr/praca/mp3d.tex
+++ b/mgr/praca/mp3d.tex
@@ -157,3 +157,19 @@ Rysunek \ref{fig:kalibracja_12x} przedstawia widok 12 sygnałów wraz z zaznaczo
     \label{fig:kalibracja_12x}
 \end{figure}
 
+\section{Obsługa programu \textit{scan.py}}
+
+Do obsługi prototypu służy program \textit{scan.py}, po jego uruchomieniu 
+na monitorze wyświetlają się trzy okna: 
+\begin{itemize}
+ \item widok 3D, na którym zaznaczona jest 
+pozycja nadajnika, cztery punkty reprezentujące głośniki nadajnika oraz trzy wektory normalne reprezentujące 
+jego orientację, rysunek \ref{fig:widok3d}
+ \item widok 2D, na którym widać nałożone na siebie dwa rzuty prostopadłe nadajnika na płaśczyzny XY i XZ, rysunek \ref{fig:widok2d}
+ \item widok informujący o sile odbieranego sygnału oraz o błędzie pomiędzy \textit{wzorcem} a sygnałem, rysunek \ref{fig:power}
+\end{itemize}
+
+\rysunek{3d}{Widok 3D}{\label{fig:widok3d}}
+\rysunek{2d}{Widok 2D}{\label{fig:widok2d}}
+\rysunek{power}{Widok informujący o mocy sygnału oraz błędzie pomiędzy \textit{wzorcem} a sygnałem}{\label{fig:power}}
+
