--- a/mgr/praca/mp3d.tex
+++ b/mgr/praca/mp3d.tex
@@ -27,7 +27,7 @@ moduł pracuje w oddzielnym wątku, w którym cyklicznie wysyła żądanie by da
 sygnał z trzech mikrofonów.
 Ta czynność powtarzana jest dla każdego z czterech nadajników.
 Zebrane dwanaście sygnałów po wstępnej filtracji przekazywane są dalej do \textit{find\_pattern.py}. Cały cykl powtarzany jest
-co 200ms. Rysunek \ref{fig:com_output_2m} przedstawia sygnał z jednego mikrofonu przekazywany do modułu \textit{find\_pattern.py}.
+co \SI{350}{ms}. Rysunek \ref{fig:com_output_2m} przedstawia sygnał z jednego mikrofonu przekazywany do modułu \textit{find\_pattern.py}.
 
 
 \begin{figure}[h!]
