--- a/mgr/praca/nadajnik.tex
+++ b/mgr/praca/nadajnik.tex
@@ -43,7 +43,7 @@ czasu jaki potrzebował sygnał dźwiękowy by do niego dotrzeć.
 \section{Dobór rezonatorów piezoelektrycznych}
 
 Głównym problemem podczas konstrukcji nadajnika okazał się dobór odpowiednich rezonatorów piezoelektrycznych.
-Mimo, że producent zapewnia zakres pracy rezonatorów w zakresie: $40 kHz \pm 1kHz$, taki rozrzut okazał się niewystarczający, 
+Mimo, że producent zapewnia zakres pracy rezonatorów w zakresie: \SI{40}{kHz} $\pm$ \SI{1}{kHz}, taki rozrzut okazał się niewystarczający, 
 dlatego z 30 rezonatorów (15 nadajników i 15 odbiorników) wybrane zostały 4 nadajniki i 3 odbiorniki o najbardziej 
 zbliżonych częstotliwościach pracy. Częstotliwości zostały zmierzone na oscyloskopie cyfrowym, są to odpowiedzi 
 rezonatora na krótki impuls elektryczny.
