--- a/mgr/praca/teoria.tex
+++ b/mgr/praca/teoria.tex
@@ -79,7 +79,7 @@ Wzór ten możemy przybliżyć za pomocą rozwinięcia Taylora dla temperatur bl
  V_{air} = (346,13  +  0,580(T - \SI{25}{\arcdeg})) \frac{m}{s}
 \]
 
-Mimo że współczynnik temperaturowy jest stosunkowo mały i stanowi jedynie 0,17\% całej prędkości
+Mimo że współczynnik temperaturowy jest stosunkowo mały i stanowi jedynie \SI{0,17}{\%} całej prędkości
 to przy pomiarach odległości rzędu metrów i rozdzielczościach rzędu milimetrów staje się istotny, 
 dlatego w prezentowanym prototypie istotną częścią stanowi kalibracja wstępna, podczas której
 wyznaczana jest aktualna prędkość dźwięku, ubocznym efektem kalibracji jest pomiar temperatury otoczenia.
