--- a/mgr/praca/biblio.tex
+++ b/mgr/praca/biblio.tex
@@ -58,6 +58,11 @@
   \textit{VisualSFM : A Visual Structure from Motion System}
   \myurl{http://ccwu.me/vsfm/}
 
+  \bibitem{bib:mouse}  Christian Banker, Michael Cretella, Jeff Dimaria, Jamie Mitchell, Jeff Tucker, 
+  \textit{Ultrasonic 3D Wireless Computer Mouse}, 
+  Worcester Polytechnic Institute Electrical and Computer Engineering Department 
+  \myurl{https://www.wpi.edu/Pubs/E-project/Available/E-project-042607-125024/unrestricted/magicmouse_2007-04-26.pdf}
+
   \bibitem{bib:pi3dscan}
   \textit{The Pi 3D scanner project}
   \myurl{http://www.pi3dscan.com/}
