--- a/mgr/praca/biblio.tex
+++ b/mgr/praca/biblio.tex
@@ -37,7 +37,15 @@
   SLOS209G - january 1998 - revised february 2004
   \myurl{http://www.ti.com/lit/ds/symlink/tlv2774.pdf}
 
-  
+  \bibitem{bib:atmega328} datasheet, \textit{ATmega48A/PA/88A/PA/168A/PA/328/P - 
+  ATMEL 8-BIT MICROCONTROLLER WITH 4/8/16/32KBYTES IN-SYSTEM PROGRAMMABLE FLASH}
+  Atmel 2014
+  \myurl{http://www.atmel.com/images/Atmel-8271-8-bit-AVR-Microcontroller-ATmega48A-48PA-88A-88PA-168A-168PA-328-328P_datasheet_Complete.pdf}
+
+  \bibitem{bib:Arduino} \textit{Arduino Software}
+  Arduino
+  \myurl{https://www.arduino.cc/en/Main/Software}
+
   \bibitem{bib:OculusRift}  Parth Rajesh Desai, Pooja Nikhil Desai, Komal Deepak Ajmera, Khushbu Mehta,
   \textit{A Review Paper on Oculus Rift-A Virtual Reality Headset}
   \myurl{http://arxiv.org/pdf/1408.1173.pdf}
@@ -67,6 +75,9 @@
   \textit{The Pi 3D scanner project}
   \myurl{http://www.pi3dscan.com/}
 
+  \bibitem{bib:katyEulera}
+  \textit{Kąty Eulera} wikipedia
+  \myurl{https://pl.wikipedia.org/wiki/K\%C4\%85ty_Eulera}
   
   
 \end{thebibliography}
