--- a/mgr/praca/teoria.tex
+++ b/mgr/praca/teoria.tex
@@ -53,8 +53,32 @@ z czego ostatecznie otrzymujemy:
 \]
 
 
+\section{Wyznaczanie orientacji w przestrzeni}
 
 
+Kolejną rzeczą jaka nas interesuje jest orientacja w przestrzeni nadajnika,
+orientacja zdefiniowana jest jako kąty Eulera \cite{bib:katyEulera}: przechylenia, 
+pochylenia oraz odchylenia wokół osi związanych z obiektem.
+Prezentowany prototyp wyznacza położenie czterech punktów $\boldsymbol{x_1, x_2, x_3, x_4}$ znajdujących się
+na nadajniku, a następnie na ich podstawie wyznacza poszukiwane trzy kąty, rysunek \ref{fig:orientacja}:
+
+ \begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\textwidth, trim= 0mm 0mm 0mm 0mm,clip]{orientacja}
+    \caption{Wyznaczanie orientacji na podstawie czterech punktów}
+    \label{fig:orientacja}
+\end{figure}
+
+Gdzie $\boldsymbol{o} = (\boldsymbol{x_1} + \boldsymbol{x_2} + \boldsymbol{x_3} + \boldsymbol{x_4})/4$ jest szukanym położeniem
+nadajnika, a wektory: $\boldsymbol{\overrightarrow{a}} = (\boldsymbol{x_2} + \boldsymbol{x_4})/2 - \boldsymbol{o}$ i 
+$\boldsymbol{\overrightarrow{b}} = (\boldsymbol{x_1} + \boldsymbol{x_2})/2 - \boldsymbol{o}$ wyznaczają nam jednoznacznie
+jego orientację przestrzenną.
+
+Zauważmy, że wyznaczenie czterech punktów daje nam pewną nadmiarowość
+danych, mianowicie do wyznaczenia pozycji nadajnika potrzebujemy trzech współrzędnych,
+a dla orientacji potrzebujemy trzech kątów, w sumie daje to jedynie sześć niewiadomych.
+W naszym przypadku wyznaczamy dwanaście niewiadomych co daje dwukrotną nadmiarowość danych.
+Jest to efekt pożądany, ów nadmiarowość prototyp wykorzystuje do korekcji błędów pomiarowych.
 
 
 \section{Pomiar odległości za pomocą ultradźwięków}
@@ -82,7 +106,7 @@ Wzór ten możemy przybliżyć za pomocą rozwinięcia Taylora dla temperatur bl
 Mimo że współczynnik temperaturowy jest stosunkowo mały i stanowi jedynie \SI{0,17}{\%} całej prędkości
 to przy pomiarach odległości rzędu metrów i rozdzielczościach rzędu milimetrów staje się istotny, 
 dlatego w prezentowanym prototypie istotną częścią stanowi kalibracja wstępna, podczas której
-wyznaczana jest aktualna prędkość dźwięku, ubocznym efektem kalibracji jest pomiar temperatury otoczenia.
+wyznaczana jest aktualna prędkość dźwięku.
 
 
 
