--- a/mgr/praca/biblio.tex
+++ b/mgr/praca/biblio.tex
@@ -36,6 +36,11 @@
   \bibitem{bib:TLV2774} \textit{TLV277x, TLV277xA - Family of 2.7-V high-slew-rate rail-to-rail output operation amplifiers with shutdown.}
   SLOS209G - january 1998 - revised february 2004
   \myurl{http://www.ti.com/lit/ds/symlink/tlv2774.pdf}
+  
+  \bibitem{bib:LM78M05CDT} Texas Instruments, \textit{LM341/LM78MXX Series 3-Terminal Positive Voltage Regulators}
+  SNVS090E - MAY 2004 - REVISED AUGUST 2005
+  \myurl{http://www.ti.com/lit/ds/symlink/lm341.pdf}
+  
 
   \bibitem{bib:atmega328} datasheet, \textit{ATmega48A/PA/88A/PA/168A/PA/328/P - 
   ATMEL 8-BIT MICROCONTROLLER WITH 4/8/16/32KBYTES IN-SYSTEM PROGRAMMABLE FLASH}
