--- a/mgr/praca/odbiornik.tex
+++ b/mgr/praca/odbiornik.tex
@@ -2,12 +2,12 @@
 
 
 Centralną częścią prezentowanego prototypu jest odbiornik,
-jego zadaniem jest wysyłanie sygnałów sterujących do nadajnika, zbieranie ultradźwięków z otoczenia oraz przesłanie
+jego zadaniem jest wysyłanie sygnałów sterujących do nadajnika, zbieranie z otoczenia ultradźwięków oraz przesłanie
 ich do dalszej analizy do komputera.
 Składa się on z sześciu części (rysunek \ref{fig:odbiornik_szkic}):
 
 \begin{itemize}
- \item trzech modułów ultradźwiękowych przetwarzających ultradźwięki na sygnał elektryczny
+ \item trzech modułów ultradźwiękowych przetwarzających dźwięk na sygnał elektryczny
  \item płytki prototypowej \textit{stm32f4-discovery} \cite{bib:stm32f4Discovery}, która odpowiada za komunikację z komputerem
  \item przystawki do \textit{stm32f4-discovery} przystosowującej sygnały elektryczne z modułów ultradźwiękowych
   do poziomów akceptowalnych przez \textit{stm32f4-discovery}
@@ -21,26 +21,28 @@ Składa się on z sześciu części (rysunek \ref{fig:odbiornik_szkic}):
 \section{Budowa i zasada działania}
 
 Głównym elementem odbiornika stanowi płytka prototypowa \textit{stm32f4-discovery} \cite{bib:stm32f4Discovery},
-jej zadaniem jest umożliwienie komunikacji pozostałych komponentów z komputerem.
-\textit{Stm32f4-discovery} oparty jest o ARMowy procesor STM32F407VGT6 \cite{bib:stm32f407}, posiada on wbudowane trzy 12 bitowe przetworniki
+jej zadaniem jest umożliwienie komunikacji wszystkich komponentów z komputerem.
+\textit{Stm32f4-discovery} oparta jest o ARMowy procesor STM32F407VGT6 \cite{bib:stm32f407}, posiada on wbudowane trzy 12 bitowe przetworniki
 analogowo-cyfrowe umożliwiające próbkowanie z prędkością dochodzącą do \SI{2,4}{MSPS}, które wykorzystane zostały do próbkowania
 sygnałów pochodzących z modułów ultradźwiękowych. Procesor umożliwia również komunikację z komputerem poprzez 
-port USB z prędkością \SI{12}{MB/s}.
+port USB z prędkością \SI{12}{MB/s}. Dodatkowo płytka prototypowa wyposażona została w programator/debugger 
+umożliwiający programowanie procesora i jego testowanie poprzez dedykowany port USB.
 
-Oprogramowanie płytki prototypowej oparte jest na bibliotece \textit{stm32 usb 101} \cite{bib:stm32_usb_101}
+Na potrzeby odbiornika powstało oprogramowanie napisane w C sterujące procesorem,
+oprogramowanie oparte jest na bibliotece \textit{stm32 usb 101} \cite{bib:stm32_usb_101}
 zapewniającej komunikację z komputerem, do której dodana została obsługa przetworników \textit{ADC}.
 Program poprzez port USB dostaje komunikat, który z czterech nadajników ma nadawać, ta informacja przekazywana jest
 dalej do nadajnika w raz z sygnałem wyzwalającym, następnie uruchamiane są trzy przetworniki \textit{ADC}, które 
 samplują odbierany dźwięk i poprzez DMA zapisują trzy kanały w pamięci procesora.
-Częstotliwość pracy przetworników ustawiona jest na \SI{1,6}{MSPS} co daje średnio 40 próbek na jeden okres \SI{40}{kHz} sygnału.
-Program zapamiętuje \SI{16}{kS} na każdym kanale, co przy prędkości dźwięku \SI{340}{m/s} daje maksymalną mierzoną odległość rzędu 3,5 metrów.
+Częstotliwość pracy przetworników ustawiona została na \SI{1,6}{MSPS} co daje średnio 40 próbek na jeden okres \SI{40}{kHz} sygnału.
+Program zapamiętuje \SI{16}{kS} na każdy kanał, co przy prędkości dźwięku \SI{340}{m/s} daje maksymalną mierzoną odległość rzędu 2,5 metrów.
 Po zebraniu w sumie \SI{48}{kS}, całość przesyłana jest do komputera w celu dalszej analizy.
 Cały proces powtarzany jest dla każdego z czterech przetworników piezoelektrycznych nadajnika, 
 co w sumie daje 12 sygnałów, na podstawie których wyznaczona zostaje 
 pozycja w przestrzeni oraz orientacja nadajnika.
 
 Cała elektronika osadzona została na ramie zbudowanej z rur PCV w kształcie trójkąta (rysunek \ref{fig:trojkat}), 
-Odległości pomiędzy odbiornikami są z góry znane, co ułatwia obliczenia.
+odległości pomiędzy odbiornikami są z góry znane, co ułatwia obliczenia.
 
 \rysunek{trojkat}{Szkic ramy odbiornika}{\label{fig:trojkat}}
 
@@ -49,18 +51,16 @@ Odległości pomiędzy odbiornikami są z góry znane, co ułatwia obliczenia.
 \clearpage
 \section{Budowa modułu ultradźwiękowego}
 
-Odbiornik wyposażony jest w trzy moduły ultradźwiękowe, których zadaniem jest 
-zbieranie ultradźwięków z trzech oddalonych od siebie punktów w
-przestrzeni.
-Każdy z modułów wyposażony jest w przetwornik piezoelektryczny 40SR-12 \cite{bib:40ST12},
-który przetwarza sygnał akustyczny na odpowiadający mu sygnał elektryczny, sygnał ten po wstępnym wzmocnieniu
-przesyłany jest do przystawki \textit{Stm32f4-discovery}.
+Odbiornik wyposażony został w trzy moduły ultradźwiękowe, których zadaniem jest 
+zbieranie ultradźwięków z trzech oddalonych od siebie punktów.
+Każdy z modułów wyposażony jest w przetwornik piezoelektryczny (mikrofon) 40SR-12 \cite{bib:40ST12},
+który przetwarza sygnał akustyczny na odpowiadający mu sygnał elektryczny, oraz wzmacniacze operacyjne 
+wstępnie wzmacniające sygnał przesyłany dalej do przystawki \textit{Stm32f4-discovery}.
 Rysunek \ref{fig:odbiornik_ultra} przedstawia schemat modułu ultradźwiękowego.
 
 \rysunek{receiver}{Schemat modułu ultradźwiękowego}{\label{fig:odbiornik_ultra}}
 
-Sygnał wzmacniany jest za pomocą dwóch wzmacniaczy operacyjnych.
-Pierwszy z nich pracuje jako przedwzmacniacz ładunkowy \cite{bib:wzm_ladunkowy}.
+Pierwszy ze wzmacniaczy (górny) pracuje jako przedwzmacniacz ładunkowy \cite{bib:wzm_ladunkowy}.
 Ładunek wytworzony na przetworniku piezoelektrycznym zostaje w całości przeniesiony na kondensator C2 
 (wzmacniacz stara się utrzymać różnicę potencjałów miedzy dodatnim a ujemnym wejściem na zerowym poziomie),
 co jest równoważne z pojawieniem się napięcia na kondensatorze zgodnie z równaniem $U=\frac{q}{C}$.
@@ -69,7 +69,8 @@ R1 i C2 działają również jako filtr górnoprzepustowy.
 
 Drugi wzmacniacz pracuje jako zwykły wzmacniacz napięciowy wzbogacony o filtr górno i dolnoprzepustowy.
 
-Aby zminimalizować zakłócenia całość oparta jest na niskoszumowym wzmacniaczu operacyjnym NE5532 \cite{bib:ne5532}, 
+Aby zminimalizować zakłócenia całość oparta jest na niskoszumowych wzmacniaczach operacyjnych
+mieszczących się w jednym układzie scalonym NE5532 \cite{bib:ne5532}, 
 dodatkowo cała płytka drukowana jest ekranowana.
 
 Wzmocniony sygnał poprzez wtyczkę JP1 doprowadzony jest do przystawki współpracującej z \textit{stm32f4-discovery}.
@@ -78,14 +79,19 @@ Wzmocniony sygnał poprzez wtyczkę JP1 doprowadzony jest do przystawki współp
 
 \section{Przystawka do \textit{stm32f4-discovery}}
 
-Sygnał z modułów ultradźwiękowych doprowadzany jest do \textit{stm32f4-discovery} za pomocą specjalnej przystawki.
-Jej zadaniem jest przystosowanie amplitud zebranych sygnałów do wartości akceptowalnych przez STM32F407VGT6,
-dodatkowo przystawka zawiera układ zasilający jak i wyprowadzone są z niej sygnały sterujące nadajnikiem.
-Zakres napięć dopuszczalnych dla przetwornika analogowo-cyfrowego zawierają się w przedziale od \SI{0}{V} do \SI{3,3}{V},
-dlatego zastosowany został układ TLV2774 \cite{bib:TLV2774}, który zawiera w sobie 4 wzmacniacze operacyjne typu
-rail-to-rail. Wzmacniacze pracują w układzie odwracającym z ustawianym wzmocnieniem, do których dodano regulowane napięcie odniesienia.
+Sygnał z modułów ultradźwiękowych doprowadzany jest do \textit{stm32f4-discovery} poprzez specjalną przystawkę.
 Schemat przystawki przedstawiony jest na rysunku \ref{fig:przystawka}.
 
+Jej zadaniem jest przystosowanie amplitud zebranych sygnałów do wartości akceptowalnych przez STM32F407VGT6.
+Zakres napięć dopuszczalnych dla przetwornika analogowo-cyfrowego zawierają się w przedziale od \SI{0}{V} do \SI{3,3}{V},
+dlatego zastosowany został układ TLV2774 \cite{bib:TLV2774}, który zawiera w sobie 4 wzmacniacze operacyjne typu
+rail-to-rail, trzy z nich pracują w układzie odwracającym z nastawianym wzmocnieniem (potencjometry R8, R9, R10), 
+do których dodano wspólne regulowane napięcie odniesienia (potencjometr R7).
+Przystawka zawiera również stabilizator napięcia LM78M05CDT \cite{bib:LM78M05CDT}, który po podłączeniu 
+\SI{12}{V} baterii do JP4, dostarcza napięcie zasilające do wszystkich komponentów. 
+Jest również możliwość odcięcia zasilania poprzez rozwarcie zworkę JP5, co jest konieczne podczas programowania
+STM32F407VGT6.
+Z przystawki wyprowadzono również sygnały sterujące nadajnikiem wraz z zasilaniem (wtyczka JP6).
 
 
  \begin{figure}[h!]
