--- a/mgr/praca/biblio.tex
+++ b/mgr/praca/biblio.tex
@@ -80,8 +80,16 @@
   \textit{The Pi 3D scanner project}
   \myurl{http://www.pi3dscan.com/}
 
+  \bibitem{bib:powerGlove}
+  \textit{Power Glove}, wikipedia
+  \myurl{https://en.wikipedia.org/wiki/Power_Glove}
+
+  \bibitem{bib:powerGlove2}
+  \textit{Reach Out And Touch Your Data}, BYTE JULY 1990, IBM
+  \myurl{http://research.microsoft.com/en-us/um/people/bibuxton/buxtoncollection/a/pdf/BYTE\%20Glove\%20Comparision.pdf}
+
   \bibitem{bib:katyEulera}
-  \textit{Kąty Eulera} wikipedia
+  \textit{Kąty Eulera}. wikipedia
   \myurl{https://pl.wikipedia.org/wiki/K\%C4\%85ty_Eulera}
   
   
