--- a/mgr/praca/wprowadzenie.tex
+++ b/mgr/praca/wprowadzenie.tex
@@ -65,11 +65,12 @@ Jeśli chodzi o stosunkowo długi czas odświeżania to
  głównym czynnikiem jaki na niego wpływa jest czas potrzebny by fala dźwiękowa się rozproszyć,
  tak by jej odbicia od powierzchni ścian nie wpływały na kolejne pomiary.
 
- Należy również wspomnieć o pracy \textit{Ultrasonic 3D Wireless Computer Mouse} \cite{bib:mouse}, w której przedstawiono 
- prototyp myszki 3D działającej na podobnej zasadzie, niemniej ów praca koncentruje się głównie 
- na określaniu położenia myszki w przestrzeni, bez wyznaczania jej orientacji.
+Należy również wspomnieć o pracy \textit{Ultrasonic 3D Wireless Computer Mouse} \cite{bib:mouse}, w której przedstawiono 
+prototyp myszki 3D działającej na podobnej zasadzie, niemniej ów praca koncentruje się głównie
+na określaniu położenia myszki w przestrzeni, bez wyznaczania jej orientacji oraz wykorzystana metoda 
+mierzenia odległości jest dużo bardziej podatna na błędy od metody prezentowanej w niniejszej pracy.
+Ciekawym rozwiązaniem była również rękawica dla graczy o nazwie \textit{Power Glove} \cite{bib:powerGlove} \cite{bib:powerGlove2} dla
+\textit{Nintendo Entertainment System} wydana w roku 1989, ona również wykorzystywała ultradźwięki do wyznaczania pozycji
+rękawicy w przestrzeni, jednak precyzja urządzenia była wyjątkowo słaba przez co rękawica nie odniosła znaczącego sukcesu komercyjnego.
 
 
-
-
-   
