--- a/mgr/praca/teoria.tex
+++ b/mgr/praca/teoria.tex
@@ -29,10 +29,10 @@ Zauważmy, że znając odległość $\boldsymbol{x}$ od jednego punktu stałego 
 sferze o promieniu równym danej odległości. Znając dwie odległości możemy ograniczyć poszukiwania do części wspólnej dwóch sfer,
 czyli okręgu. Dla znanych trzech odległości dostajemy część wspólną okręgu ze sferą, czyli dwa możliwe punkty.
 Mimo, iż trzy odległości nie są wystarczające do jednoznacznego wyznaczenia $\boldsymbol{x}$, 
-to otrzymane rozwiązania są na ogół od siebie daleko oddalone i bez większych problemów
+to otrzymane rozwiązania są na ogół od siebie daleko oddalone i bez większego problemu
 możemy założyć, że jedno z rozwiązań jest naszym szukanym punktem.
 
-Ponieważ mamy pewną swobodę w doborze punktów stałych $\boldsymbol{y_i}$ dla uproszenia możemy przyjąć:
+Ponieważ mamy pełną dowolność w doborze punktów stałych $\boldsymbol{y_i}$ dla uproszenia możemy przyjąć:
 $\boldsymbol{y_1}=(\frac{a}{2},0,0), \boldsymbol{y_2}=(-\frac{a}{2},0,0), \boldsymbol{y_3}=(0,h,0)$, czyli $\boldsymbol{y_1}, \boldsymbol{y_2}, \boldsymbol{y_3}$ są wierzchołkami
 trójkąta równoramiennego o wysokości $h$ i podstawie $a$, wtedy układ równań upraszcza
 się do postaci:
