--- a/mgr/praca/odbiornik.tex
+++ b/mgr/praca/odbiornik.tex
@@ -1,14 +1,13 @@
 \chapter{Odbiornik}
 
-
-Centralną częścią prezentowanego prototypu jest odbiornik,
-jego zadaniem jest wysyłanie sygnałów sterujących do nadajnika, zbieranie z otoczenia ultradźwięków oraz przesłanie
+Centralną częścią prezentowanego prototypu jest odbiornik.
+Jego zadaniem jest wysyłanie sygnałów sterujących do nadajnika, zbieranie z otoczenia ultradźwięków oraz przesłanie
 ich do dalszej analizy do komputera.
 Składa się on z sześciu części (rysunek \ref{fig:odbiornik_szkic}):
 
 \begin{itemize}
  \item trzech modułów ultradźwiękowych przetwarzających dźwięk na sygnał elektryczny
- \item płytki prototypowej \textit{stm32f4-discovery} \cite{bib:stm32f4Discovery}, która odpowiada za komunikację z komputerem
+ \item płytki prototypowej \textit{stm32f4-discovery} \cite{bib:stm32f4Discovery} odpowiadającej za komunikację z komputerem
  \item przystawki do \textit{stm32f4-discovery} przystosowującej sygnały elektryczne z modułów ultradźwiękowych
   do poziomów akceptowalnych przez \textit{stm32f4-discovery}
  \item ramy, na której umieszczone są moduły ultradźwiękowe
